Set min height to avoid overflowing spinners

--- a/src/components/HiGlassViewer.scss
+++ b/src/components/HiGlassViewer.scss
@@ -1,4 +1,6 @@
 .higlass-viewer {
+  min-height: 10rem;
+
   &.has-sub-top-bar {
     top: 2rem;
   }
